--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://B15hesh.github.io/React_project",
   "scripts": {
     "dev": "vite",
     "predeploy": "npm run build",
@@ -12,9 +13,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "axios": "^1.13.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.1",
     "react-scripts": "^5.0.1",
@@ -29,6 +30,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "vite": "^7.2.4"
   }
