--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "type": "module",
   "homepage": "https://B15hesh.github.io/online-bookstore",
   "scripts": {
-    "dev": "vite",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist",
+  "build": "vite build",
+  "dev": "vite"
+}
+,
   "dependencies": {
     "axios": "^1.13.2",
     "react": "^19.2.0",
